# Rowr

./: CMakeLists.txt  README.md  copy_to_windows.sh  rower.code-workspace  rowr.code-workspace  toolchain.cmake
board/: blinky.ld
cmake/: ConfigureNRFSDK.cmake
include/: nrf51_gpio.h
nrf51_sdk/components/drivers_nrf/delay/: nrf_delay.h
nrf51_sdk/components/toolchain/gcc/: Makefile.posix
src/: CMakeLists.txt  main.c  main.cpp  nrf51_gpio.cpp
src/board/: CMakeLists.txt  nrf51_startup.s
